Colab を使用して作成されました

--- a/Scripts/step4.ipynb
+++ b/Scripts/step4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlmxJUHpviYoTeFRMRtBTN",
+      "authorship_tag": "ABX9TyOdd/GSSdQboLyQxZAd9vSq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +142,7 @@
         "\n",
         "from sklearn.cluster import DBSCAN\n",
         "\n",
-        "clustering = DBSCAN(eps=0.016, min_samples=20).fit(points_nogreen)\n",
+        "clustering = DBSCAN(eps=m*2, min_samples=20).fit(points_nogreen)\n",
         "labels = clustering.labels_\n",
         "\n",
         "cluster_id = 0\n",
@@ -159,7 +159,7 @@
         "    if len(cluster_points) > (len(points_nogreen)/2):\n",
         "        print(f\"クラスタ {lbl} は {len(cluster_points)} 点 → 再クラスタリング開始\")\n",
         "\n",
-        "        sub_clustering = DBSCAN(eps=0.01, min_samples=20).fit(cluster_points)\n",
+        "        sub_clustering = DBSCAN(eps=m*1.2, min_samples=20).fit(cluster_points)\n",
         "        sub_labels = sub_clustering.labels_\n",
         "\n",
         "        for sub_lbl in set(sub_labels):\n",
